--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!Doctype>
 <html>
 <head></head>
-<body><p>Javaris- My favorite movie is Let Me Explain</p></body>
+<body><p>Javaris- My favorite movie is Let Me Explain</p><p>kenneth- my movie is friday</p></body>
+</html>
